kubernetes-deployments/ingress/nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: via-ingress.us-west1-a.securethebox.us
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
