kubernetes-deployments/ingress/traefik.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
spec:
  rules:
  - host: traefik-ingress.us-west1-a.securethebox.us
    http:
      paths:
      - backend:
          serviceName: traefik
          servicePort: 80
data:
  traefik.toml: |
    # traefik.toml
    defaultEntryPoints = ["http", "https"]
    [entryPoints]
      [entryPoints.dashboard]
        address = ":8080"
        [entryPoints.dashboard.auth]
          [entryPoints.dashboard.auth.basic]
            users = ["admin:$apr1$xqVaeUIK$qIZRhjFalEEvrlBIBXXib."]
      [entryPoints.http]
        address = ":80"
          [entryPoints.http.redirect]
            entryPoint = "https"
      [entryPoints.https]
        address = ":443"
          [entryPoints.https.tls]

    [api]
    entrypoint="dashboard"

    [acme]
    email = "acme@securethebox.us"
    storage = "acme.json"
    entryPoint = "https"
    onHostRule = true
      [acme.httpChallenge]
      entryPoint = "http"
